# ExoskeletonAI

./: .gitmodules  .~lock.Budget.xlsx#  Budget.xlsx  ExoAI  ISSUE_TEMPLATE.md  Makefile  README.md  setup.bash  staic_ip.txt
demo_video/: Makefile  text  text.c
doc/: info.txt
documentation/general_information/: .~lock.Budget.xlsx#  Budget.xlsx  NeuralNet.xml  actuator_pins.txt  test.c
documentation/hardware_doc/: doc_config
documentation/software_code_doc/: doc_config
documentation/software_doc/: doc_config
gui/: Makefile  ecosystem.cpp  gene.hpp  main.cpp  network.hpp  node.cpp
gui/include/: ExoGUIApp.hpp  ExoGUIMain.hpp  common.hpp  ecosystem.hpp  node.hpp  species.hpp
gui/src/: ExoGUIApp.cpp  ExoGUIMain.cpp  network.cpp  species.cpp
hardware/: ExoHAI  Makefile  gyrodriver.c
hardware/archive/: Makefile  README.md  origMakefileLSM
hardware/include/: LSM9DS0.h  LSM9DS1.h  gyroscope.h
hardware/main/: main.cpp
hardware/src/: IMU.c  Makefile  gyro  gyro.py  gyrodriver.c  gyroscope.c  gyroscope.cpp
lib/: Makefile  info.txt
software/: ExoSAI  Makefile  Makefile.win  exoAIStats.txt  run.bash  test.bash  valgrind.bash
software/demo_video/: AccesingGPIOS.c  Makefile
software/include/: LSM9DS1.hpp  LSM9DS1_Types.hpp  common.hpp  ecosystem.hpp  gene.hpp  (+12 more)
software/test/: CMakeCache.txt  CMakeLists.txt  ExoTest  Makefile  cmake_install.cmake  exoAIStats.txt  global.hpp  info.txt  test_node.cpp
software/test/ExoSAI.dir/: CXX.includecache  DependInfo.cmake  build.make  cmake_clean.cmake  depend.internal  depend.make  link.txt
spike/: info.txt
(+176 files in other folders)
